fix: Move scrollbar-width into * selector to fix esbuild CSS warning

--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,13 @@
     -moz-appearance: textfield;
   }
 
+  * {
+    scrollbar-width: none;
+  }
+
   ::-webkit-scrollbar {
     display: none;
   }
-
-  scrollbar-width: none;
 }
 
 @layer components {
